<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/myimage"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:background="@drawable/myheader"
        android:layout_marginTop="-100dp"/>

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:padding="8dp"
        android:text="@string/question_mountain"
        android:textColor="@android:color/holo_orange_dark"
        android:gravity="center"
        android:layout_marginBottom="75dp"
        android:textSize="20sp"
        android:textStyle="bold|italic" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:background="@color/sky"
            android:textStyle="italic"
            android:shadowColor = "#FF5722"
            android:shadowDx = "-2"
            android:shadowDy = "-2"
            android:shadowRadius = "1"
            android:text="@string/true_text">
        </Button>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:background="@color/sky"
            android:textStyle="italic"
            android:shadowColor = "#FF5722"
            android:shadowDx = "-2"
            android:shadowDy = "-2"
            android:shadowRadius = "1"
            android:id="@+id/false_button"
            android:text="@string/false_text">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:orientation="horizontal">

        <ImageButton
            android:contentDescription="@string/previous_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:background="@color/colorAccent"
            android:id="@+id/prev_button"
            android:src="@drawable/backward">
        </ImageButton>

        <ImageButton
            android:contentDescription="@string/next_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/colorAccent"
            android:id="@+id/next_button"
            android:src="@drawable/forward">
        </ImageButton>

    </LinearLayout>
</LinearLayout>
